# MNIST

./: README.md  autograd_notebook.ipynb  notebook.ipynb  pyproject.toml  pytorch_notebook.ipynb
src/: __init__.py  test_default.py
