[tool.poetry]
name = "mnist"
version = "0.1.0"
description = ""
authors = ["Philipp Fischer <philipp.fischer@js-soft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
